# system-monitor-web

./: Cargo.toml  Dockerfile  LICENSE  README.md  system-monitor-server.js  system-monitor.html
.github/workflows/: docker-publish.yml  release.yml  rust-ci.yml
src/: lib.rs  main.rs  model.rs
systemd/: system-monitor.service
tests/: derive_gpu_activity_metric.rs  router_endpoints.rs  system-monitor-server.test.js
