[package]
name = "system-monitor-web"
version = "0.3.1"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
